[package]
name = "rust-lwb-macros"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rust-lwb = {version="0.1.0", path = "../rust-lwb"}
quote = "1.0.18"
syn = {version="1.0.91", features = ["parsing"]}
