[package]
name = "rust-lwb-tests"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rust-lwb = {path="../rust-lwb"}
rust-lwb-macros = {path="../rust-lwb-macros"}

[build-dependencies]
select-rustc = "0.1.2"
