[package]
name = "rust-lwb"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
miette = { version = "3.3.0", features = ["fancy"] }
lazy_static = "1.4.0"
enum-iterator = "0.7.0"
derive_more = "0.99.17"
codegen = "0.1.3"
convert_case = "0.5.0"
itertools = "0.10.3"

paste = "1.0.6"

[dev-dependencies]
bnf = "0.3.4" # for bootstrap parser only
