[package]
name = "rust-lwb"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
miette = { version = "3.3.0", features = ["fancy"] }
itertools = "0.10.3"
lwb-parser = {version="0.1.0", path="../lwb-parser"}


[dev-dependencies]
bnf = "0.3.4" # for bootstrap parser only
