[package]
name = "json"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lwb-parser = {version="0.1.0", path="../../lwb-parser"}

[build-dependencies]
lwb-parser = {version="0.1.0", path="../../lwb-parser"}
