[package]
name = "simple-typed-language"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lwb = {path = "../../rust-lwb"}
thiserror = "1.0.30"

[build-dependencies]
rust-lwb = {path = "../../rust-lwb"}
